Fixed text issues in dark mode

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -67,7 +67,7 @@ body.light-mode h4 {
   color: #000000;
 }
 
-.h1-col-override {
+.text-col-override-dark {
   color: #000000 !important;
 }
 
